--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title> Austin Shea's Big Site</title>
     <!--Reset, Use on Future Projects-->
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
-     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> --> <!--Boot Strap Baby!!!!-->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+    <!--Boot Strap Baby!!!!-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -18,27 +19,30 @@
 
     <div class="flex-container">
 
+
         <header>
 
             <div class="name" align="left">
+                <!--Can Utilize Sections-->
                 <h1>Austin Shea</h1>
             </div>
 
             <div class="menu" align="right">
+                <!--Can Utilize Nav Tag As Well-->
                 <ul>
-                    <li>
+                    <li class="nav">
                         <a href="index.html" target="_blank">About</a>
                     </li>
 
-                    <li>|</li>
+                    <li class="bars">|</li>
 
-                    <li>
+                    <li class="nav">
                         <a href="portfolio.html" target="_blank">Portfolio</a>
                     </li>
 
-                    <li>|</li>
+                    <li class="bars">|</li>
 
-                    <li>
+                    <li class="nav">
                         <a href="contacts.html" target="_blank">Contact</a>
                     </li>
                 </ul>
@@ -48,7 +52,8 @@
 
         <br>
         <br>
-        <div class="main-content" align="center">  <!--Can Utilize Sections-->
+        <div class="main-content" align="center">
+            <!--Can Utilize Sections-->
             <div class="aboutme" align="left">
 
                 <h2 align="left">About Me</h2>
@@ -82,9 +87,11 @@
                     </p>
                 </div>
 
-            </div>  <!--end of aboutme-->
+            </div>
+            <!--end of aboutme-->
 
-        </div> <!--end of maincontent-->
+        </div>
+        <!--end of maincontent-->
 
     </div> <!-- end of flex-container -->
 
