--- a/portfolio.html
+++ b/portfolio.html
@@ -26,19 +26,19 @@
 
             <div class="menu" align="right">  <!--Can Utilize Nav Tag As Well-->
                 <ul>
-                    <li>
+                    <li class="nav">
                         <a href="index.html" target="_blank">About</a>
                     </li>
 
-                    <li>|</li>
+                    <li class="bars">|</li>
 
-                    <li>
+                    <li class="nav">
                         <a href="portfolio.html" target="_blank">Portfolio</a>
                     </li>
 
-                    <li>|</li>
+                    <li class="bars">|</li>
 
-                    <li>
+                    <li class="nav">
                         <a href="contacts.html" target="_blank">Contact</a>
                     </li>
                 </ul>
